# fma

./: .gitignore  IMPROVEMENT_GUIDE.md  PRODUCTION_GUIDE.md  QUICK_START.md  astronomical_codecs.py  astronomical_dataset.py  codecs.ipynb  inference_astronomical.py  pyproject.toml  step2_define_quantizers.py  step3_implement_codecs.py  step4_codec_manager.py  step5_train_codecs.py  step6_train_transformer.py  test_model_image_reconstruction.py  train_astronomical.py  train_image_codec.py
.claude/: settings.local.json
core/: implement_codecs.py
old/: .gitignore  astronomical_codecs.py  astronomical_dataset.py  codec_config.yaml  compare_codecs.py  example_data_generator.py  inference_astronomical.py  retrieval_example.py  segmentation_example.py  train_codec_with_config.py
old/core/: codec_manager.py  define_modalities.py  pretrained_codecs.py  train_codecs.py  train_transformer.py
old/test/: debug_num_tokens.py
old/tutorials/: DATA_REQUIREMENTS.md  INFERENCE_GUIDE.md
test/: test_model_image_reconstruction.py
tutorials/: CODEC_INTEGRATION_GUIDE.md  MULTI_SOURCE_GUIDE.md
